--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Titulo de ejemplo</title>
+    <title>Primer despliegue</title>
 </head>
 <body>
-    <h1>primer despliege</h1>
+    <h1>hola informatorio ! </h1>
 </body>
 </html>
